# ipumspy

./: .coveragerc  .env.sample  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  NOTICE.txt  README.md  conftest.py  pyproject.toml  requirements.testing.txt  setup.py
.github/workflows/: codecov.yml  coverage.yml  main.yml
docs/: Makefile  requirements.txt
docs/source/: CONTRIBUTING.md  change-log.rst  cli.rst  conf.py  ddi.rst  extracts.rst  getting_started.rst  index.rst  intro.rst  readers.rst  reading_data.rst  variables.rst
docs/source/_templates/: base.html  class.rst
docs/source/ipums_api/: index.rst
docs/source/ipums_api/ipums_api_aggregate/: agg_extracts.rst  data_types.rst  index.rst  metadata.rst
docs/source/ipums_api/ipums_api_micro/: index.rst  reading_data.rst  variables.rst
docs/source/reference/: api.rst  ddi.rst  index.rst  noextract.rst  readers.rst  utilities.rst
ipumspy/: cli.py  ddi.py  fileutils.py  readers.py
src/ipumspy/: __init__.py  __version__.py  apiutils.py  cli.py  codes.py  ddi.py  fileutils.py  noextract.py  noextract_collections.py  readers.py  types.py  utilities.py  yrbss.py
src/ipumspy/api/: __init__.py  core.py  exceptions.py  extract.py  metadata.py
tests/: mock_api.py  test_api.py  test_api_core.py  test_apiutils.py  test_cli.py  test_ddi.py  test_fileutils.py  test_metadata.py  test_noextract.py  test_readers.py  test_utilities.py
tests/cassettes/test_api/: test_adjust_monetary_values_errors.yaml  test_agg_data_feature_errors.yaml  test_attach_characteristics_feature_errors.yaml  test_bad_api_request_exception.yaml  test_download_expired_extract.yaml  test_download_extract.yaml  test_download_extract_r.yaml  test_download_extract_sas.yaml  test_download_extract_spss.yaml  test_download_extract_stata.yaml  test_extract_is_expired.yaml  test_extract_was_expired.yaml  test_extract_was_purged.yaml  test_get_all_sample_info.yaml  test_get_extract_by_id.yaml  test_get_pages.yaml  test_nhgis_download_extract.yaml  test_nhgis_feature_errors.yaml  test_nhgis_submit_extract.yaml  test_nhgis_submit_extract_live.yaml  test_not_found_exception.yaml  test_rect_on_nonP_extract.yaml  test_select_cases_feature_errors.yaml  test_submit_extract_dict.yaml  test_submit_extract_live.yaml  test_submit_hierarchical_extract_live.yaml  test_usa_feature_errors.yaml
tests/cassettes/test_metadata/: test_get_metadata.yaml  test_get_metadata_catalog.yaml  test_get_nhgis_metadata.yaml  test_ipums_api_rate_limit_exception.yaml
tests/cassettes/test_utilities/: test_get_sample_ids.yaml
tests/fixtures/: atus_00034.xml  atus_00035.xml  atus_00040.xml  cps_00006.parquet  cps_00361.xml  cps_00421.xml  example_extract.json  example_extract.yml  example_extract_from_api.json  example_extract_from_api_v2.json  example_extract_v2.json  example_extract_v2.yml  example_extract_v2_complex.json  example_extract_v2_complex.yml  example_fancy_extract_from_api_v2.json  example_tuv_extract_v2.json  meps_00019.xml  meps_00020.xml  meps_00045.xml  nhgis_extract_v2.pkl  nhgis_extract_v2.yml  usa_00136.xml  usa_00172.xml  usa_00172_extract_obj.pkl  usa_00196.xml  usa_00196_extract_obj.pkl  usa_extract_obj.pkl
