[tool.poetry]
name = "ipumspy"
version = "0.2.1"
description = "A collection of tools for working with IPUMS data"
authors = ["Kevin H. Wilson <kevin_wilson@brown.edu>",
           "Renae Rodgers <rodge103@umn.edu>"]
license = "Mozilla Public License 2.0 (MPL 2.0)"
packages = [
    { include = "ipumspy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.5"
click = "^7.0.0"
pyarrow = "^3.0.0"
requests = "^2.25.1"
importlib-metadata = {version = "^4.0.1", python = "<3.8"}
PyYAML = "^5.4.1"
beautifulsoup4 = "^4.11.1"

# Documentation dependencies
# Note that these are currently required to be specified in this section
# until poetry supports dependency groups: python-poetry/poetry#1644
Sphinx = { version = "^4.1.2", optional = true }
sphinx-autodoc-typehints = { version = "^1.12.0", optional = true }
sphinx-copybutton = { version = "^0.4.0", optional = true }
myst-parser = { version = "^0.15.2", optional = true }
furo = { version = "^2021.8.31", optional = true }

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pylint = "^2.7.4"
isort = "^5.8.0"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-cov = "^2.12.1"
python-dotenv = "^0.17.0"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pytest-recording = "^0.12.0"

[tool.poetry.extras]
docs = [
    "Sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "myst-parser",
    "furo",
]

[tool.poetry.scripts]
ipums = "ipumspy.cli:cli"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,df,pc"

[tool.pylint.messages_control]
disable = "C0330, C0326, R0912, R0913, R0914, R0915"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
markers = [ "slow: Run with --runslow",
            "integration: Run with --runint" ]

[tool.coverage.run]
omit = [
    "*/tests/*",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
